# project-2_magomedov_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
demos/: demo1.cast  demo2.cast  demo3.cast
src/primitive_db/: commands.py  constants.py  core.py  decorators.py  engine.py  main.py  models.py  parser.py  utils.py
